force-app/main/default/objects/Work_Log__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle #</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Vehicle</fullName>
            </value>
            <value>
                <fullName>F1</fullName>
            </value>
            <value>
                <fullName>HYBR</fullName>
            </value>
            <value>
                <fullName>E7</fullName>
            </value>
            <value>
                <fullName>E8</fullName>
            </value>
            <value>
                <fullName>E9</fullName>
            </value>
            <value>
                <fullName>E10</fullName>
            </value>
            <value>
                <fullName>E11</fullName>
            </value>
            <value>
                <fullName>E12</fullName>
            </value>
            <value>
                <fullName>E13</fullName>
            </value>
            <value>
                <fullName>E14</fullName>
            </value>
            <value>
                <fullName>E15</fullName>
            </value>
            <value>
                <fullName>E16</fullName>
            </value>
            <value>
                <fullName>E17</fullName>
            </value>
            <value>
                <fullName>R3</fullName>
            </value>
            <value>
                <fullName>R6</fullName>
            </value>
            <value>
                <fullName>SD1</fullName>
            </value>
            <value>
                <fullName>SD2</fullName>
            </value>
            <value>
                <fullName>SD3</fullName>
            </value>
            <value>
                <fullName>SD4</fullName>
            </value>
            <value>
                <fullName>V1</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>