force-app/main/default/objects/Work_Log__c/fields/Vehicle_Fixed_Asset_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Fixed_Asset_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fixed Asset (Vehicle)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Fixed_Asset__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vehicle</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fixed_Asset__c</referenceTo>
    <relationshipName>Work_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>