force-app/main/default/objects/Work_Log__c/fields/Vehicle_Name__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Name__c</fullName>
    <description>This field is referenced in DART API</description>
    <formula>Vehicle_Fixed_Asset_Lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Name</label>
    <type>Text</type>
</CustomField>