force-app/main/default/objects/Work_Log__c/fields/Weather__c.field-meta.xml
<CustomField>
    <fullName>Weather__c</fullName>
    <inlineHelpText>What were the weather conditions like on this day?</inlineHelpText>
    <label>Weather</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Ice</fullName>
            </value>
            <value>
                <fullName>Rain</fullName>
            </value>
            <value>
                <fullName>Snow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>