force-app/main/default/objects/Work_Log__c/fields/Work_Log_Count__c.field-meta.xml
<CustomField>
    <fullName>Work_Log_Count__c</fullName>
    <formula>1</formula>
    <label>Work Log Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>