force-app/main/default/objects/Work_Log__c/fields/Work_Log_Notes__c.field-meta.xml
<CustomField>
    <fullName>Work_Log_Notes__c</fullName>
    <label>Work Log Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>