force-app/main/default/objects/Work_Log__c/fields/Worker_Hours__c.field-meta.xml
<CustomField>
    <fullName>Worker_Hours__c</fullName>
    <formula>if (isblank(Lunch_End_Proxy__c) &amp;&amp; isblank(Lunch_Start_Proxy__c),

(floor (Worker_Time_Out_Proxy__c) + (Worker_Time_Out_Proxy__c - floor (Worker_Time_Out_Proxy__c))/60*100) 

- 

(floor (Worker_Time_In_Proxy__c) + (Worker_Time_In_Proxy__c - floor (Worker_Time_In_Proxy__c))/60*100), 


(floor (Worker_Time_Out_Proxy__c) + (Worker_Time_Out_Proxy__c - floor (Worker_Time_Out_Proxy__c))/60*100) 

- 

(floor (Worker_Time_In_Proxy__c) + (Worker_Time_In_Proxy__c - floor (Worker_Time_In_Proxy__c))/60*100)

-

((floor ( Lunch_End_Proxy__c ) + (Lunch_End_Proxy__c - floor (Lunch_End_Proxy__c ))/60*100)

-

(floor ( Lunch_Start_Proxy__c ) + (Lunch_Start_Proxy__c - floor (Lunch_Start_Proxy__c ))/60*100)))</formula>
    <label>Worker Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>