force-app/main/default/objects/Work_Log__c/fields/Worker_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Worker_Time_In__c</fullName>
    <inlineHelpText>Enter the most common Time In for interns and staff.</inlineHelpText>
    <label>Worker Time In</label>
    <length>8</length>
    <type>Text</type>
</CustomField>