force-app/main/default/objects/Work_Log__c/fields/Worker_Time_In_Proxy__c.field-meta.xml
<CustomField>
    <fullName>Worker_Time_In_Proxy__c</fullName>
    <label>Worker Time In Proxy</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>