force-app/main/default/objects/Work_Log__c/fields/Worker_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Worker_Time_Out__c</fullName>
    <inlineHelpText>Enter the most common Time Out for interns and staff.</inlineHelpText>
    <label>Worker Time Out</label>
    <length>8</length>
    <type>Text</type>
</CustomField>