force-app/main/default/objects/Work_Log__c/recordTypes/Cleanslate_Daily_Log.recordType-meta.xml
<RecordType>
    <fullName>Cleanslate_Daily_Log</fullName>
    <active>true</active>
    <label>Cleanslate Daily Log</label>
</RecordType>