force-app/main/default/objects/Work_Log__c/recordTypes/Emerson_Daily_Log.recordType-meta.xml
<RecordType>
    <fullName>Emerson_Daily_Log</fullName>
    <active>false</active>
    <label>Emerson Daily Log</label>
</RecordType>