force-app/main/default/objects/Work_Log__c/validationRules/Arrival_Time_Begin_Work.validationRule-meta.xml
<ValidationRule>
    <fullName>Arrival_Time_Begin_Work</fullName>
    <active>true</active>
    <errorConditionFormula>if (RecordTypeId=&quot;0120Z000001Ifac&quot;, FALSE, 

if (NOT(REGEX(Arrival_Time_Begin_Work__c, &quot;[0]?[0-9]:[0-5][0-9] [A|P]M&quot;)) &amp;&amp; NOT(REGEX(Arrival_Time_Begin_Work__c, &quot;[1]?[0-2]:[0-5][0-9] [A|P]M&quot;)), TRUE,

FALSE))</errorConditionFormula>
    <errorDisplayField>Arrival_Time_Begin_Work__c</errorDisplayField>
    <errorMessage>Enter time in format hh:mm AM/PM.</errorMessage>
</ValidationRule>