force-app/main/default/objects/Work_Log__c/validationRules/Changes_After_Reviewed_and_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Changes_After_Reviewed_and_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>priorvalue( Reviewed_Approved_Decoy__c ) = TRUE

&amp;&amp;

(

ischanged ( Job_Function__c )

||

ischanged ( Organization__c )

||

ischanged ( Vehicle_Fixed_Asset_Lookup__c )

)</errorConditionFormula>
    <errorMessage>This work log has to be unapproved in order to make edits.</errorMessage>
</ValidationRule>