force-app/main/default/objects/Work_Log__c/validationRules/Departure_Time_Begin_Transport.validationRule-meta.xml
<ValidationRule>
    <fullName>Departure_Time_Begin_Transport</fullName>
    <active>true</active>
    <errorConditionFormula>if (RecordTypeId=&quot;0120Z000001Ifac&quot;, FALSE, 

if (NOT(REGEX(Departure_Time_Begin_Transport__c, &quot;[0]?[0-9]:[0-5][0-9] [A|P]M&quot;)) &amp;&amp; NOT(REGEX(Departure_Time_Begin_Transport__c, &quot;[1]?[0-2]:[0-5][0-9] [A|P]M&quot;)), TRUE,

FALSE))</errorConditionFormula>
    <errorDisplayField>Departure_Time_Begin_Transport__c</errorDisplayField>
    <errorMessage>Enter time in format hh:mm AM/PM.</errorMessage>
</ValidationRule>