force-app/main/default/objects/Work_Log__c/validationRules/Job_Function_is_CLSL.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Function_is_CLSL</fullName>
    <active>true</active>
    <errorConditionFormula>Organization__r.Organization_ID_18_Digits__c = &apos;0010Z00001ySoPfQAK&apos; &amp;&amp;
not(ispickval(Job_Function__c, &quot;CLSL&quot;))</errorConditionFormula>
    <errorMessage>Job Function should be CLSL.</errorMessage>
</ValidationRule>