force-app/main/default/objects/Work_Log__c/validationRules/Job_Function_is_Service.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Function_is_Service</fullName>
    <active>true</active>
    <errorConditionFormula>Organization__r.Organization_ID_18_Digits__c = &apos;001i000000ZwwqOAAR&apos; &amp;&amp; 
not(ispickval(Job_Function__c, &quot;Service&quot;))</errorConditionFormula>
    <errorMessage>Job Function should be Service.</errorMessage>
</ValidationRule>