force-app/main/default/objects/Work_Log__c/validationRules/Lunch_End_Time_Sequence.validationRule-meta.xml
<ValidationRule>
    <fullName>Lunch_End_Time_Sequence</fullName>
    <active>true</active>
    <errorConditionFormula>if (isblank (Lunch_Start__c) &amp;&amp; isblank(Lunch_End__c), FALSE,

if (contains(Lunch_Start__c, &quot;AM&quot;) &amp;&amp; contains (Lunch_End__c, &quot;PM&quot;), FALSE, 

if (contains(Lunch_Start__c, &quot;PM&quot;) &amp;&amp; contains (Lunch_End__c, &quot;AM&quot;), TRUE, 

if (contains(Lunch_Start__c, &quot;12:&quot;) &amp;&amp; not(contains (Lunch_End__c, &quot;12:&quot;)), FALSE,

if (contains(Lunch_Start__c, &quot;AM&quot;) &amp;&amp; contains (Lunch_End__c, &quot;AM&quot;) &amp;&amp; value(substitute(substitute(Lunch_End__c, &quot; AM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))-value(substitute(substitute(Lunch_Start__c, &quot; AM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))&gt;=0, FALSE, 

if (contains(Lunch_Start__c, &quot;PM&quot;) &amp;&amp; contains (Lunch_End__c, &quot;PM&quot;) &amp;&amp; value(substitute(substitute(Lunch_End__c, &quot; PM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))-value(substitute(substitute(Lunch_Start__c, &quot; PM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))&gt;=0, FALSE, 

TRUE))))))</errorConditionFormula>
    <errorMessage>&apos;Lunch End&apos; should be after &apos;Lunch Start&apos;, and both or neither should be filled in.</errorMessage>
</ValidationRule>