force-app/main/default/objects/Work_Log__c/validationRules/Lunch_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Lunch_Start</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Lunch_Start__c, &quot;[0]?[0-9]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT(REGEX(Lunch_Start__c, &quot;[1]?[0-2]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT (isblank (Lunch_Start__c))</errorConditionFormula>
    <errorDisplayField>Lunch_Start__c</errorDisplayField>
    <errorMessage>Enter time in format hh:mm AM/PM.</errorMessage>
</ValidationRule>