force-app/main/default/objects/Work_Log__c/validationRules/Lunch_Start_Time_Sequence.validationRule-meta.xml
<ValidationRule>
    <fullName>Lunch_Start_Time_Sequence</fullName>
    <active>true</active>
    <errorConditionFormula>if (isblank(Lunch_Start__c), FALSE,

if (contains( Departure_Time_Begin_Transport__c , &quot;AM&quot;) &amp;&amp; contains (Lunch_Start__c, &quot;PM&quot;), FALSE, 

if (contains(Departure_Time_Begin_Transport__c , &quot;PM&quot;) &amp;&amp; contains (Lunch_Start__c, &quot;AM&quot;), TRUE, 

if (contains(Departure_Time_Begin_Transport__c , &quot;12:&quot;) &amp;&amp; not(contains (Lunch_Start__c, &quot;12:&quot;)), FALSE, 

if (contains(Departure_Time_Begin_Transport__c , &quot;AM&quot;) &amp;&amp; contains (Lunch_Start__c , &quot;AM&quot;) &amp;&amp; value(substitute(substitute(Lunch_Start__c, &quot; AM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))-value(substitute(substitute(Departure_Time_Begin_Transport__c , &quot; AM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))&gt;=0, FALSE, 

if (contains(Departure_Time_Begin_Transport__c , &quot;PM&quot;) &amp;&amp; contains (Lunch_Start__c, &quot;PM&quot;) &amp;&amp; value(substitute(substitute(Lunch_Start__c, &quot; PM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))-value(substitute(substitute(Departure_Time_Begin_Transport__c , &quot; PM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))&gt;=0, FALSE, 

TRUE))))))</errorConditionFormula>
    <errorMessage>&apos;Lunch Start&apos; should be after &apos;Departure Time, Begin Transport&apos;</errorMessage>
</ValidationRule>