force-app/main/default/objects/Work_Log__c/validationRules/Reviewed_and_Approved_Work_Log_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Reviewed_and_Approved_Work_Log_Locked</fullName>
    <active>true</active>
    <errorConditionFormula>(priorvalue(Reviewed_Approved__c) 

|| 

(not(ischanged(Reviewed_Approved__c)) &amp;&amp; Reviewed_Approved__c))

&amp;&amp; 

not($User.Work_Log_Approver__c)</errorConditionFormula>
    <errorMessage>Work log has been reviewed and approved and can only be edited by Alison Benes, Andrea Cote, or Julie Chiu.</errorMessage>
</ValidationRule>