force-app/main/default/objects/Work_Log__c/validationRules/Total_Mileage.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Mileage</fullName>
    <active>true</active>
    <errorConditionFormula>(Total_Mileage__c &lt; 0  || Total_Mileage__c  &gt;= 200)

&amp;&amp; 

Organization__r.Name &lt;&gt; &quot;Hesed House&quot;</errorConditionFormula>
    <errorMessage>Total Mileage is negative or Total Mileage is too high (over 200). Please review Mileage Out and Mileage In.</errorMessage>
</ValidationRule>