force-app/main/default/objects/Work_Log__c/validationRules/Work_Date_in_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Work_Date_in_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Work_Date__c &gt; today()</errorConditionFormula>
    <errorMessage>The date of this work log is in the future and should be corrected.</errorMessage>
</ValidationRule>