force-app/main/default/objects/Work_Log__c/validationRules/Worker_Time_Controller.validationRule-meta.xml
<ValidationRule>
    <fullName>Worker_Time_Controller</fullName>
    <active>true</active>
    <errorConditionFormula>Worker_Time_In__c = Worker_Time_Out__c</errorConditionFormula>
    <errorMessage>Worker Time In should be different from Worker Time Out.</errorMessage>
</ValidationRule>