force-app/main/default/objects/Work_Log__c/validationRules/Worker_Time_Out.validationRule-meta.xml
<ValidationRule>
    <fullName>Worker_Time_Out</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Worker_Time_Out__c, &quot;[0]?[0-9]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp;

NOT(REGEX(Worker_Time_Out__c, &quot;[1]?[0-2]:[0-5][0-9] [A|P]M&quot;))</errorConditionFormula>
    <errorDisplayField>Worker_Time_Out__c</errorDisplayField>
    <errorMessage>Enter time in format hh:mm AM/PM.</errorMessage>
</ValidationRule>