force-app/main/default/objects/Work_Log__c/validationRules/Worker_Time_Out_Sequence.validationRule-meta.xml
<ValidationRule>
    <fullName>Worker_Time_Out_Sequence</fullName>
    <active>true</active>
    <errorConditionFormula>if (contains(Worker_Time_In__c, &quot;AM&quot;) &amp;&amp; contains (Worker_Time_Out__c , &quot;PM&quot;), FALSE, 

if (contains(Worker_Time_In__c, &quot;PM&quot;) &amp;&amp; contains (Worker_Time_Out__c, &quot;AM&quot;), TRUE, 

if (contains(Worker_Time_In__c, &quot;12:&quot;) &amp;&amp; not(contains (Worker_Time_Out__c, &quot;12:&quot;)), FALSE, 

if (contains(Worker_Time_In__c, &quot;AM&quot;) &amp;&amp; contains (Worker_Time_Out__c , &quot;AM&quot;) &amp;&amp; value(substitute(substitute(Worker_Time_Out__c, &quot; AM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))-value(substitute(substitute(Worker_Time_In__c, &quot; AM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))&gt;=0, FALSE, 

if (contains(Worker_Time_In__c, &quot;PM&quot;) &amp;&amp; contains (Worker_Time_Out__c , &quot;PM&quot;) &amp;&amp; value(substitute(substitute(Worker_Time_Out__c, &quot; PM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))-value(substitute(substitute(Worker_Time_In__c, &quot; PM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))&gt;=0, FALSE, 

TRUE)))))</errorConditionFormula>
    <errorMessage>&apos;Worker Time Out&apos; should be after &apos;Worker Time In&apos;</errorMessage>
</ValidationRule>