force-app/main/default/objects/Work_Log__c/listViews/All_Cleanslate_Daily_Logs.listView-meta.xml
<ListView>
    <fullName>All_Cleanslate_Daily_Logs</fullName>
    <columns>Log__c</columns>
    <columns>NAME</columns>
    <columns>Work_Date__c</columns>
    <columns>Organization__c</columns>
    <columns>Reviewed_Approved_Decoy__c</columns>
    <columns>Job_Function__c</columns>
    <columns>Inches_of_Snow__c</columns>
    <columns>Salt_Loaded__c</columns>
    <columns>Salt_Returned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Work_Log__c.Cleanslate_Daily_Log</value>
    </filters>
    <filters>
        <field>Work_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>4/1/2023</value>
    </filters>
    <label>All Cleanslate Daily Logs, This CY</label>
</ListView>