force-app/main/default/objects/Work_Log__c/listViews/Cleanslate_Daily_Logs_Last_Month.listView-meta.xml
<ListView>
    <fullName>Cleanslate_Daily_Logs_Last_Month</fullName>
    <columns>NAME</columns>
    <columns>Log__c</columns>
    <columns>Work_Date__c</columns>
    <columns>Organization__c</columns>
    <columns>Job_Function__c</columns>
    <columns>Work_Log_Notes__c</columns>
    <columns>Reviewed_Approved_Decoy__c</columns>
    <columns>Billing_Notes__c</columns>
    <columns>Dimension_3_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Work_Log__c.Cleanslate_Daily_Log</value>
    </filters>
    <filters>
        <field>Work_Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Cleanslate Daily Logs, Last Mo, BILLING</label>
    <language>en_US</language>
</ListView>