force-app/main/default/objects/Work_Log__c/listViews/Cleanslate_Daily_Logs_This_Week.listView-meta.xml
<ListView>
    <fullName>Cleanslate_Daily_Logs_This_Week</fullName>
    <columns>Log__c</columns>
    <columns>NAME</columns>
    <columns>Work_Date__c</columns>
    <columns>Organization__c</columns>
    <columns>Job_Function__c</columns>
    <columns>Reviewed_Approved_Decoy__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Work_Log__c.Cleanslate_Daily_Log</value>
    </filters>
    <filters>
        <field>Work_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Cleanslate Daily Logs, This Week</label>
</ListView>